todo Create sec

--- a/todolist/main.html
+++ b/todolist/main.html
@@ -6,11 +6,24 @@
     <title>ToDoList</title>
   </head>
   <body>
-    <div>
-      <h1 class="head">ToDoList</h1>
-      <div class="clock">clock</div>
+    <!-- content ~ -->
+    <div class="content">
+      <!-- content_head ~ -->
+      <div class="content_head">
+        <h1 class="head">ToDoList</h1>
+        <div class="clock"></div>
+      </div>
+      <!-- ~ content_head -->
+      <!-- content_inner ~ -->
+      <div class="content_inner">
+        <div class="constent">
+          <input type="checkbox" />
+        </div>
+      </div>
+      <!-- ~ content_inner -->
     </div>
+    <!-- ~ content -->
+    <script src="./main.js"></script>
+    <script src="./clock.js"></script>
   </body>
-  <script src="./main.js"></script>
-  <script src="./clock.js"></script>
 </html>
