--- a/todolist/main.html
+++ b/todolist/main.html
@@ -29,14 +29,15 @@
               value="追加"
               onclick="console.log('add')"
             />
+            <input
+              class="toDo_delBtn"
+              type="button"
+              value="削除"
+              onclick="console.log('del')"
+            />
           </form>
-          <input
-            class="toDo_delBtn"
-            type="button"
-            value="削除"
-            onclick="console.log('del')"
-          />
         </div>
+        <div class="toDo_list"></div>
       </div>
       <!-- ~ content_inner -->
     </div>
