--- a/todolist/main.html
+++ b/todolist/main.html
@@ -37,7 +37,9 @@
             />
           </form>
         </div>
-        <div class="toDo_list"></div>
+        <div class="toDo_list">
+          <input type="checkbox" />
+        </div>
       </div>
       <!-- ~ content_inner -->
     </div>
