--- a/todolist/src/main.html
+++ b/todolist/src/main.html
@@ -37,9 +37,9 @@
             />
           </form>
         </div>
-        <div class="toDo_list">
-          <input type="checkbox" />
-        </div>
+        <!-- toDo_list ~ -->
+        <div class="toDo_list"></div>
+        <!-- ~ toDo_list -->
       </div>
       <!-- ~ content_inner -->
     </div>
