--- a/todolist/src/main.html
+++ b/todolist/src/main.html
@@ -23,18 +23,8 @@
               type="text"
               placeholder="作業を入力してください。"
             />
-            <input
-              class="toDo_addBtn"
-              type="submit"
-              value="追加"
-              onclick="console.log('add')"
-            />
-            <input
-              class="toDo_delBtn"
-              type="button"
-              value="削除"
-              onclick="console.log('del')"
-            />
+            <input class="toDo_addBtn" type="submit" value="追加" />
+            <input class="toDo_multiDelBtn" type="button" value="削除" />
           </form>
         </div>
         <!-- toDo_list ~ -->
