html css js practice

--- a/OnlineLecture/step02/index.html
+++ b/OnlineLecture/step02/index.html
@@ -38,6 +38,9 @@
       PW
     </button>
   </body>
+  <!-- ver1 onclick -->
   <!-- <script src="./js/ver1.js"></script> -->
+
+  <!-- ver2 addEventListener -->
   <script src="./js/ver2.js"></script>
 </html>
